fix(lxlweb): fix select option invisible text bug (#1630)

--- a/lxl-web/src/app.css
+++ b/lxl-web/src/app.css
@@ -235,6 +235,11 @@
 	summary::-webkit-details-marker {
 		display: none;
 	}
+
+	option {
+		color: var(--color-body);
+		background: var(--color-page);
+	}
 }
 
 @layer components {
